--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     <link rel="manifest" href="./favicon/site.webmanifest">
     <link rel="stylesheet" href="./app-css-generator-border-radius.css">
     <link rel="stylesheet" href="./app-css-generator-border-radius-toggle.css">
+    <script defer src="./app-css-generator-border-radius.js"></script>
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <h1>CSS generator: create your border-radius easily!</h1>
 
         <div class="toggle">
@@ -28,27 +29,27 @@
 
     </header>
 
-    <section>
+    <main class="main">
         <div class="sliders">
-            <div class="sliders__top--left">
+            <div class="sliders__top_left">
                 <label>border-top-left-radius</label>
                 <input type="range" data-range="border-radius-top-left" min="0" max="100" value="0">
                 <input type="number" data-number="border-radius-top-left" min="0" max="100" value="0">
                 <span data-res="border-radius-top-left">0</span>
             </div>
-            <div class="sliders__top--right">
+            <div class="sliders__top_right">
                 <label>border-top-right-radius</label>
                 <input type="number" data-number="border-radius-top-right" min="0" max="100" value="0">
                 <input type="range" data-range="border-radius-top-right" min="0" max="100" value="0">
                 <span data-res="border-radius-top-right">0</span>
             </div>
-            <div class="sliders__botom--left">
+            <div class="sliders__botom_left">
                 <span data-res="border-radius-bottom-left">0</span>
                 <input type="range" data-range="border-radius-bottom-left" min="0" max="100" value="0">
                 <input type="number" data-number="border-radius-bottom-left" min="0" max="100" value="0">
                 <label>border-bottom-left-radius</label>
             </div>
-            <div class="sliders__bottom--right">
+            <div class="sliders__bottom_right">
                 <span data-res="border-radius-bottom-right">0</span>
                 <input type="number" data-number="border-radius-bottom-right" min="0" max="100" value="0">
                 <input type="range" data-range="border-radius-bottom-right" min="0" max="100" value="0">
@@ -59,18 +60,14 @@
         <div class="container">
             <div class="box"></div>
         </div>
+    </main>
 
-    </section>
-
-    <footer>
+    <footer class="footer">
         <div class="result">
             <span data-result>border-radius: 0;</span>
         </div>
         <button class="copy none" data-btn="copy">Copy CSS</button>
     </footer>
-
-
-    <script src="./app-css-generator-border-radius.js"></script>
 </body>
 
 </html>
