add meta description

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="This generator helps you to easily created some custom borders to you blocks.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple CSS border-radius generator!</title>
     <link rel="shortcut icon" type="image/x-icon" href="./favicon/favicon.ico">
